fitx(bug): Fix z-index mangling in CSS Nano

--- a/test/app/sass/atom/input-checkbox.scss
+++ b/test/app/sass/atom/input-checkbox.scss
@@ -22,6 +22,7 @@
  */
 .input-check-box {
     position: relative;
+    z-index: 100;
 
     display: inline-flex;
     align-items: center;
@@ -51,6 +52,7 @@
         position: absolute;
         top: 0;
         left: 0;
+        z-index: 399;
 
         width: rem(25);
         height: rem(25);
@@ -73,6 +75,7 @@
 
     .icon {
         position: relative;
+        z-index: 200;
 
         display: block;
         flex-shrink: 0;
